--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,10 +1,5 @@
-.list {
-    padding-top: 20px;
-    margin-bottom: 30px;
-    list-style: none;
-}
-
-.user_list {
-    margin-top: 100px;
-    list-style: none;
+body {
+    font-family: STXIHEI;
+    font-size: 18px;
+    color: #ffffff;
 }
