--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -2,10 +2,11 @@ body {
     position: relative;
     font-family: STXIHEI;
     font-size: 18px;
-    color: #ffffff;
+    color: #000;
 }
 .music-list {
     font-family: "Microsoft YaHei UI";
     color: #000;
     font-size: 15px;
 }
+
