--- a/src/main/webapp/css/music_play.css
+++ b/src/main/webapp/css/music_play.css
@@ -11,9 +11,9 @@ body {
 }
 .barfoot {
     position: absolute;
-    left:200px;
-    top: 35%;
-    width: 65%;
+    /*left:px;*/
+    top: 18%;
+    width: 80%;
     height: 30%;
     z-index: 999;
 }
@@ -24,3 +24,10 @@ body {
     position: absolute;
     right: 5%;
 }
+
+audio {
+    width: 80%;
+    position: absolute;
+    top: 10px;
+}
+
